# mini-llm-gateway

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/api/: deps.py  error_handlers.py  schemas.py
app/api/routers/: chat.py  health.py  logs.py
app/core/: config.py  context.py  decorators.py  exceptions.py  ids.py  security.py
app/db/: models.py  session.py
app/domain/: entities.py  enums.py  protocols.py  value_objects.py
app/observability/: metrics.py  structured_logging.py
app/providers/: base.py  demo_failure.py  openrouter.py  translators.py
app/repositories/: attempts.py  projects.py  requests.py
app/services/: bootstrap.py  budget_service.py  cache_service.py  chat_service.py  logging_service.py  routing_service.py
config/: routes.yml
scripts/: demo_walkthrough.py  seed_demo.py
tests/unit/: test_budget_service.py  test_decorators.py  test_demo_failure_provider.py  test_routing_service.py
